--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,9 @@ a {text-decoration: none;}
     color: #f4f4fd;
 }
 .footer-logo {margin-bottom: 16px;}
+
+.footer-text {font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;}
