--- a/css/styles.css
+++ b/css/styles.css
@@ -47,31 +47,47 @@ a {text-decoration: none;}
     color:#434455;
       }
 
-.our-team {background-color:#f4f4fd
-    padding: 40px 0;
+
+.team {
+    background-color: #F4F4FD;
+    padding: 50px 0;
 }
-.title-team {
+.team-title {
     font-size: 36px;
-    line-height: 1.11; 
-    letter-spacing: 0.02em;
+    line-height: 1.11;
     text-align: center;
-    text-transform:capitalize ;
-    color: #2e2f42
-    margin-bottom: 24px;
-    }
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 40px;
+}
 .team-list {
-    display; flex;
-    justify-content: center;
+    display: flex;
     gap: 24px;
+    justify-content: center;
     list-style: none;
     padding: 0;
-}    
+}
 .team-item {
-    background-color: #ffff;
-    padding: 16px;
-    text-align: center;
-    border-radius: 8px;
-    }
+    border-radius: 0 0 4px 4px;
+        padding: 0px 0px 32px 0px;
+        width: 264px;
+        height: 380px;
+        }
+.team-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-top: 10px;}
+
+    .team-role {
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #434455;
+        }
 
 .features-title{
     font-weight: 500;
