--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ a {text-decoration: none;}
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-        font-family: "raleway", sans-serif;
+        font-family: "Raleway", sans-serif;
 }
 .header-logo .logo-part {color:#2e2f42;}
 .header-logo {margin-right: 76px;}
@@ -49,7 +49,7 @@ a {text-decoration: none;}
 
 
 .team {
-    background-color: #F4F4FD;
+    background-color: #f4f4fd;
     padding: 50px 0;
 }
 .team-title {
@@ -69,6 +69,7 @@ a {text-decoration: none;}
     padding: 0;
 }
 .team-item {
+    background-color: #ffffff;
     border-radius: 0 0 4px 4px;
         padding: 0px 0px 32px 0px;
         width: 264px;
