--- a/css/styles.css
+++ b/css/styles.css
@@ -37,13 +37,13 @@ a {text-decoration: none;}
 .title {font-weight: 500; 
         font-size:20px;
         line-height:1.2;
-        latter-spacing:0.02em;
+        letter-spacing:0.02em;
         color:#2e2f42
     }
 .text {
-    font-size:16px
-    line-heigth:1.5;
-    letter-spacing: 0.02em
+    font-size:16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color:#434455;
       }
 
@@ -90,14 +90,14 @@ a {text-decoration: none;}
             color: #434455;
         }
 
-.features-title{
+.title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42
 }    
-.feature-text{
+.text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
