--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,24 @@ a {text-decoration: none;}
         color: #404bbf;
     }
 
+.section-1{
+    background-color: #2e2f42;
+    padding:60px 20 px;
+}
+.section-title{
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    }
+.order-serv-btn:hover,
+.order-serv-btn:focus {
+    background-color: #404bbf;
+}
+
+
+
 
 .title {font-weight: 500; 
         font-size:20px;
