--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ a {text-decoration: none;}
 
 .section-1{
     background-color: #2e2f42;
-    padding:60px 20 px;
+    padding: 60px 20px;
 }
 .section-title{
     font-size: 56px;
@@ -44,6 +44,20 @@ a {text-decoration: none;}
     letter-spacing: 0.02em;
     color: #ffffff;
     }
+.order-serv-btn{
+    background-color: #4d5ae5;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease
+}
+
 .order-serv-btn:hover,
 .order-serv-btn:focus {
     background-color: #404bbf;
