--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,30 @@ a {text-decoration: none;}
     color: #434455
 }
 
+.portfolio-title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 40px;
+}
+.portfolio-name
+{font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-top: 10px;}
 
+.portfolio-list{
+    display: flex;
+        gap: 24px;
+        justify-content: center;
+        list-style: none;
+        padding: 0;
+}
     .contacts {font-style: normal;}     
 
 .contacts-link {
