--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ a {text-decoration: none;}
     color: #434455
 }
 
-.portfolio-title {
+.portfolio {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -145,13 +145,20 @@ a {text-decoration: none;}
     color: #2e2f42;
     margin-bottom: 40px;
 }
-.portfolio-name
+.portfolio-title
 {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-top: 10px;}
+
+.portfolio-desc{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing:0.02em;
+    color: #434455;
+}    
 
 .portfolio-list{
     display: flex;
