--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {text-decoration: none;}
         color: #404bbf;
     }
 
-.section-1{
+.section-one{
     background-color: #2e2f42;
     padding: 60px 20px;
 }
