--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ a {text-decoration: none;}
 
 .section-one{
     background-color: #2e2f42;
-    padding: 60px 20px;
+    
 }
 .section-title{
     font-size: 56px;
@@ -52,13 +52,14 @@ a {text-decoration: none;}
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 0.3s ease
+    
+    
+    
 }
 
-.order-serv-btn:hover,
+.order-serv-btn:hover {
+    background-color: #404bbf;
+}
 .order-serv-btn:focus {
     background-color: #404bbf;
 }
@@ -82,7 +83,7 @@ a {text-decoration: none;}
 
 .team {
     background-color: #f4f4fd;
-    padding: 50px 0;
+    
 }
 .team-title {
     font-size: 36px;
@@ -94,15 +95,12 @@ a {text-decoration: none;}
     margin-bottom: 40px;
 }
 .team-list {
-    display: flex;
-    gap: 24px;
     justify-content: center;
     list-style: none;
-    padding: 0;
+    
 }
 .team-item {
     background-color: #ffffff;
-    border-radius: 0 0 4px 4px;
         padding: 0px 0px 32px 0px;
         width: 264px;
         height: 380px;
@@ -162,10 +160,10 @@ a {text-decoration: none;}
 
 .portfolio-list{
     display: flex;
-        gap: 24px;
+        
         justify-content: center;
         list-style: none;
-        padding: 0;
+        
 }
     .contacts {font-style: normal;}     
 
