--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ a {text-decoration: none;}
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 40px;
+    text-transform: capitalize
 }
 .portfolio-title
 {font-weight: 500;
