--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,8 @@ a {text-decoration: none;}
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 40px;
-    text-transform: capitalize
+    text-transform: capitalize;
+    text-align: center;
 }
 .portfolio-title
 {font-weight: 500;
