--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ a {text-decoration: none;}
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
+    font-family: "Roboto", sans-serif;
     
     
     
